--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="nav">
         <div class="logo"><h2>Sonic IT</h2></div>
         <div class="nav-links">
-            <a href="#">Home</a>
+            <a href="#" class="home">Home</a>
             <a href="#">About</a>
             <a href="#">Services</a>
             <a href="#">Contact</a>
